src/gen/NTAParser.java
// Generated from /home/david/eclipse-workspace/mutants/src/NTAParser.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NTAParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, CDATA=2, DTD=3, EntityRef=4, CharRef=5, SEA_WS=6, OPEN_DECLARATION=7, 
		OPEN_PARAMETER=8, OPEN_GUARD=9, OPEN_SYNC=10, OPEN_LBLTR=11, OPEN_SELECT=12, 
		OPEN_INV=13, OPEN_SYSTEM=14, OPEN=15, OPENSLASH=16, XMLDeclOpen=17, TEXT=18, 
		PI=19, NTA=20, DECLARATION=21, TEMPLATE=22, LOCATION=23, NAME=24, COLOR=25, 
		X=26, Y=27, ID=28, TRANSITION=29, SOURCE=30, TARGET=31, NAIL=32, FORMULA=33, 
		LABEL=34, INIT=35, BRANCHPOINT=36, COMMITTED=37, URGENTTAG=38, SYSTEM=39, 
		QUERIES=40, QUERY=41, QUERY_COMMENT=42, KIND=43, INVARIANT=44, SYNCHRONIZE=45, 
		GUARD=46, ASSIGNMENT=47, SELECT=48, REF=49, CLOSE=50, SPECIAL_CLOSE=51, 
		SLASH_CLOSE=52, EQUALS=53, STRING=54, Name=55, S=56, BLOCKCOMMENT=57, 
		INLINECOMMENT=58, NAT=59, CLOSE_DECLARATION=60, CLOSE_LABEL=61, CLOSE_PARAMETER=62, 
		CLOSE_SYSTEM=63, TRASH=64, URGENT=65, BROADCAST=66, META=67, CONST=68, 
		INT=69, CLOCK=70, CHANNEL=71, BOOL=72, DOUBLE=73, SCALAR=74, STRUCT=75, 
		TYPEDEF=76, PRIORITY=77, DEFAULT=78, APOSTROPHE=79, OPEN_PARENTHESIS=80, 
		CLOSE_PARENTESIS=81, OPEN_BRACKET=82, CLOSE_BRACKET=83, OPEN_CURLYBRACKET=84, 
		CLOSE_CURLYBRACKET=85, DOT=86, COMMA=87, COLON=88, SEMICOLON=89, QUESTION=90, 
		INCREMENT=91, DECREMENT=92, SYSTEMEXPR=93, ASSIGN=94, NOT=95, SNOT=96, 
		ADD=97, MINUS=98, LESS=99, LESSEQ=100, EQ=101, NOTEQ=102, GREATEEQ=103, 
		GREATER=104, PROD=105, DIV=106, MOD=107, BITOR=108, BITAND=109, XOR=110, 
		RSHIFT=111, LSHIFT=112, LAND=113, LOR=114, AND=115, OR=116, IMPLY=117, 
		MIN=118, MAX=119, FORALL=120, EXISTS=121, SUM=122, DEADLOCK=123, TRUE=124, 
		FALSE=125, FOR=126, WHILE=127, DO=128, IF=129, ELSE=130, RETURN=131, GANTT=132, 
		IDENTIFIER=133;
	public static final int
		RULE_model = 0, RULE_prolog = 1, RULE_element = 2, RULE_content = 3, RULE_reference = 4, 
		RULE_attribute = 5, RULE_chardata = 6, RULE_misc = 7, RULE_nta = 8, RULE_declaration = 9, 
		RULE_declarations = 10, RULE_expr = 11, RULE_arguments = 12, RULE_variableDecl = 13, 
		RULE_type = 14, RULE_prefix = 15, RULE_typeID = 16, RULE_fieldDecl = 17, 
		RULE_arrayDecl = 18, RULE_variableID = 19, RULE_initialiser = 20, RULE_typeDecl = 21, 
		RULE_function = 22, RULE_paramTag = 23, RULE_parameters = 24, RULE_parameter = 25, 
		RULE_block = 26, RULE_localDecl = 27, RULE_statement = 28, RULE_chanPriority = 29, 
		RULE_chanExpr = 30, RULE_forLoop = 31, RULE_iteration = 32, RULE_whileLoop = 33, 
		RULE_doWhileLoop = 34, RULE_ifStatement = 35, RULE_returnStmnt = 36, RULE_template = 37, 
		RULE_templateBody = 38, RULE_location = 39, RULE_labelLoc = 40, RULE_initRef = 41, 
		RULE_branchpoint = 42, RULE_commited = 43, RULE_urgent = 44, RULE_name = 45, 
		RULE_color = 46, RULE_coord = 47, RULE_id = 48, RULE_transition = 49, 
		RULE_source = 50, RULE_target = 51, RULE_labelUpdate = 52, RULE_labelGuard = 53, 
		RULE_labelSync = 54, RULE_labelSelect = 55, RULE_selectList = 56, RULE_anything = 57, 
		RULE_system = 58, RULE_process = 59, RULE_systemDecl = 60, RULE_ganttDecl = 61, 
		RULE_nail = 62, RULE_queries = 63, RULE_query = 64, RULE_formula = 65, 
		RULE_comment = 66;
	private static String[] makeRuleNames() {
		return new String[] {
			"model", "prolog", "element", "content", "reference", "attribute", "chardata", 
			"misc", "nta", "declaration", "declarations", "expr", "arguments", "variableDecl", 
			"type", "prefix", "typeID", "fieldDecl", "arrayDecl", "variableID", "initialiser", 
			"typeDecl", "function", "paramTag", "parameters", "parameter", "block", 
			"localDecl", "statement", "chanPriority", "chanExpr", "forLoop", "iteration", 
			"whileLoop", "doWhileLoop", "ifStatement", "returnStmnt", "template", 
			"templateBody", "location", "labelLoc", "initRef", "branchpoint", "commited", 
			"urgent", "name", "color", "coord", "id", "transition", "source", "target", 
			"labelUpdate", "labelGuard", "labelSync", "labelSelect", "selectList", 
			"anything", "system", "process", "systemDecl", "ganttDecl", "nail", "queries", 
			"query", "formula", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'<'", "'</'", null, null, null, "'nta'", "'declaration'", 
			"'template'", "'location'", "'name'", "'color'", "'x'", "'y'", "'id'", 
			"'transition'", "'source'", "'target'", "'nail'", "'formula'", "'label'", 
			"'init'", "'branchpoint'", "'committed'", null, null, "'queries'", "'query'", 
			"'comment'", "'kind'", "'\"invariant\"'", "'\"synchronisation\"'", "'\"guard\"'", 
			"'\"assignment\"'", "'\"select\"'", "'ref'", "'>'", null, "'/>'", "'='", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'broadcast'", "'meta'", "'const'", "'int'", "'clock'", "'chan'", "'bool'", 
			"'double'", "'scalar'", "'struct'", "'typedef'", "'priority'", "'default'", 
			"'''", "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", "':'", 
			"';'", "'?'", "'++'", "'--'", null, null, "'not'", "'!'", "'+'", "'-'", 
			"'&lt;'", "'&lt;='", "'=='", "'!='", "'&gt;='", "'&gt;'", "'*'", "'&#8725;'", 
			"'%'", "'|'", "'&amp;'", "'^'", "'&gt;&gt;'", "'&lt;&lt;'", "'&amp;&amp;'", 
			"'||'", "'and'", "'or'", "'imply'", "'&lt;?'", "'&gt;?'", "'forall'", 
			"'exists'", "'sum'", "'deadlock'", "'true'", "'false'", "'for'", "'while'", 
			"'do'", "'if'", "'else'", "'return'", "'gantt'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "CDATA", "DTD", "EntityRef", "CharRef", "SEA_WS", "OPEN_DECLARATION", 
			"OPEN_PARAMETER", "OPEN_GUARD", "OPEN_SYNC", "OPEN_LBLTR", "OPEN_SELECT", 
			"OPEN_INV", "OPEN_SYSTEM", "OPEN", "OPENSLASH", "XMLDeclOpen", "TEXT", 
			"PI", "NTA", "DECLARATION", "TEMPLATE", "LOCATION", "NAME", "COLOR", 
			"X", "Y", "ID", "TRANSITION", "SOURCE", "TARGET", "NAIL", "FORMULA", 
			"LABEL", "INIT", "BRANCHPOINT", "COMMITTED", "URGENTTAG", "SYSTEM", "QUERIES", 
			"QUERY", "QUERY_COMMENT", "KIND", "INVARIANT", "SYNCHRONIZE", "GUARD", 
			"ASSIGNMENT", "SELECT", "REF", "CLOSE", "SPECIAL_CLOSE", "SLASH_CLOSE", 
			"EQUALS", "STRING", "Name", "S", "BLOCKCOMMENT", "INLINECOMMENT", "NAT", 
			"CLOSE_DECLARATION", "CLOSE_LABEL", "CLOSE_PARAMETER", "CLOSE_SYSTEM", 
			"TRASH", "URGENT", "BROADCAST", "META", "CONST", "INT", "CLOCK", "CHANNEL", 
			"BOOL", "DOUBLE", "SCALAR", "STRUCT", "TYPEDEF", "PRIORITY", "DEFAULT", 
			"APOSTROPHE", "OPEN_PARENTHESIS", "CLOSE_PARENTESIS", "OPEN_BRACKET", 
			"CLOSE_BRACKET", "OPEN_CURLYBRACKET", "CLOSE_CURLYBRACKET", "DOT", "COMMA", 
			"COLON", "SEMICOLON", "QUESTION", "INCREMENT", "DECREMENT", "SYSTEMEXPR", 
			"ASSIGN", "NOT", "SNOT", "ADD", "MINUS", "LESS", "LESSEQ", "EQ", "NOTEQ", 
			"GREATEEQ", "GREATER", "PROD", "DIV", "MOD", "BITOR", "BITAND", "XOR", 
			"RSHIFT", "LSHIFT", "LAND", "LOR", "AND", "OR", "IMPLY", "MIN", "MAX", 
			"FORALL", "EXISTS", "SUM", "DEADLOCK", "TRUE", "FALSE", "FOR", "WHILE", 
			"DO", "IF", "ELSE", "RETURN", "GANTT", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NTAParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NTAParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ModelContext extends ParserRuleContext {
		public NtaContext nta() {
			return getRuleContext(NtaContext.class,0);
		}
		public PrologContext prolog() {
			return getRuleContext(PrologContext.class,0);
		}
		public List<MiscContext> misc() {
			return getRuleContexts(MiscContext.class);
		}
		public MiscContext misc(int i) {
			return getRuleContext(MiscContext.class,i);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NTAParserListener ) ((NTAParserListener)listener).enterModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NTAParserListener ) ((NTAParserListener)listener).exitModel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NTAParserVisitor ) return ((NTAParserVisitor<? extends T>)visitor).visitModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==XMLDeclOpen) {
				{
				setState(134);
				prolog();
				}
			}

			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMENT) | (1L << SEA_WS) | (1L << PI))) != 0)) {
				{
				{
				setState(137);
				misc();
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143);
			nta();
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMENT) | (1L << SEA_WS) | (1L << PI))) != 0)) {
				{
				{
				setState(144);
				misc();
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrologContext extends ParserRuleContext {
		public TerminalNode XMLDeclOpen() { return getToken(NTAParser.XMLDeclOpen, 0); }
		public TerminalNode SPECIAL_CLOSE() { return getToken(NTAParser.SPECIAL_CLOSE, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public PrologContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prolog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NTAParserListener ) ((NTAParserListener)listener).enterProlog(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NTAParserListener ) ((NTAParserListener)listener).exitProlog(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NTAParserVisitor ) return ((NTAParserVisitor<? extends T>)visitor).visitProlog(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrologContext prolog() throws RecognitionException {
		PrologContext _localctx = new PrologContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prolog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(XMLDeclOpen);
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Name) {
				{
				{
				setState(151);
				attribute();
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(157);
			match(SPECIAL_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public TerminalNode OPEN() { return getToken(NTAParser.OPEN, 0); }
		public List<TerminalNode> Name() { return getTokens(NTAParser.Name); }
		public TerminalNode Name(int i) {
			return getToken(NTAParser.Name, i);
		}
		public List<TerminalNode> CLOSE() { return getTokens(NTAParser.CLOSE); }
		public TerminalNode CLOSE(int i) {
			return getToken(NTAParser.CLOSE, i);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public TerminalNode OPENSLASH() { return getToken(NTAParser.OPENSLASH, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public TerminalNode SLASH_CLOSE() { return getToken(NTAParser.SLASH_CLOSE, 0); }
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NTAParserListener ) ((NTAParserListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NTAParserListener ) ((NTAParserListener)listener).exitElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NTAParserVisitor ) return ((NTAParserVisitor<? extends T>)visitor).visitElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_element);
		int _la;
		try {
			setState(182);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(159);
				match(OPEN);
				setState(160);
				match(Name);
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Name) {
					{
					{
					setState(161);
					attribute();
					}
					}
					setState(166);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(167);
				match(CLOSE);
				setState(168);
				content();
				setState(169);
				match(OPENSLASH);
				setState(170);
				match(Name);
				setState(171);
				match(CLOSE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(173);
				match(OPEN);
				setState(174);
				match(Name);
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Name) {
					{
					{
					setState(175);
					attribute();
					}
					}
					setState(180);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(181);
				match(SLASH_CLOSE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContentContext extends ParserRuleContext {
		public List<ChardataContext> chardata() {
			return getRuleContexts(ChardataContext.class);
		}
		public ChardataContext chardata(int i) {
			return getRuleContext(ChardataContext.class,i);
		}
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public List<ReferenceContext> reference() {
			return getRuleContexts(ReferenceContext.class);
		}
		public ReferenceContext reference(int i) {
			return getRuleContext(ReferenceContext.class,i);
		}
		public List<TerminalNode> CDATA() { return getTokens(NTAParser.CDATA); }
		public TerminalNode CDATA(int i) {
			return getToken(NTAParser.CDATA, i);
		}
		public List<TerminalNode> PI() { return getTokens(NTAParser.PI); }
		public TerminalNode PI(int i) {
			return getToken(NTAParser.PI, i);
		}
		public List<TerminalNode> COMMENT() { return getTokens(NTAParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(NTAParser.COMMENT, i);
		}
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NTAParserListener ) ((NTAParserListener)listener).enterContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NTAParserListener ) ((NTAParserListener)listener).exitContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NTAParserVisitor ) return ((NTAParserVisitor<? extends T>)visitor).visitContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_content);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEA_WS || _la==TEXT) {
				{
				setState(184);
				chardata();
				}
			}

			setState(199);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMENT) | (1L << CDATA) | (1L << EntityRef) | (1L << CharRef) | (1L << OPEN) | (1L << PI))) != 0)) {
				{
				{
				setState(192);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case OPEN:
					{
					setState(187);
					element();
					}
					break;
				case EntityRef:
				case CharRef:
					{
					setState(188);
					reference();
					}
					break;
				case CDATA:
					{
					setState(189);
					match(CDATA);
					}
					break;
				case PI:
					{
					setState(190);
					match(PI);
					}
					break;
				case COMMENT:
					{
					setState(191);
					match(COMMENT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEA_WS || _la==TEXT) {
					{
					setState(194);
					chardata();
					}
				}

				}
				}
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReferenceContext extends ParserRuleContext {
		public TerminalNode EntityRef() { return getToken(NTAParser.EntityRef, 0); }
		public TerminalNode CharRef() { return getToken(NTAParser.CharRef, 0); }
		public ReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NTAParserListener ) ((NTAParserListener)listener).enterReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NTAParserListener ) ((NTAParserListener)listener).exitReference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NTAParserVisitor ) return ((NTAParserVisitor<? extends T>)visitor).visitReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReferenceContext reference() throws RecognitionException {
		ReferenceContext _localctx = new ReferenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_reference);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(202);
			_la = _input.LA(1);
			if ( !(_la==EntityRef || _la==CharRef) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public TerminalNode Name() { return getToken(NTAParser.Name, 0); }
		public TerminalNode EQUALS() { return getToken(NTAParser.EQUALS, 0); }
		public TerminalNode STRING() { return getToken(NTAParser.STRING, 0); }
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NTAParserListener ) ((NTAParserListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NTAParserListener ) ((NTAParserListener)listener).exitAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NTAParserVisitor ) return ((NTAParserVisitor<? extends T>)visitor).visitAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204);
			match(Name);
			setState(205);
			match(EQUALS);
			setState(206);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
